--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -1,9 +1,17 @@
 page-home {
 
 
-.fadeIn{
-	animation-name:fadeIn,
-	animation-duration:4s;
-}
+@keyframes fadeIn{
+ 	from{
+		opacity:0;
+ 		},
+ 	to{
+		opacity:1;
+ 	}
+ }
 
+	.fadeIn{
+		animation-name:fadeIn;
+		animation-duration:10s;
+	}
 }
